--- a/main.html
+++ b/main.html
@@ -13,9 +13,29 @@
       <div class="ryu-ready"></div>
       <div class="ryu-throwing"></div>
       <div class="hadouken"></div>
-    </div> 
+      <div class="ryu-cool"></div>
+    </div>
+    <div class="text-contaner">
+      <div class="sf-logo">
+        <img src="images/SFLogo.png" alt="Street Fighter Logo">
+      </div>
+      <div class="jq-logo">
+        <img src="images/JQuery_logo.svg" alt="JQuery Logo">
+      </div>
+      <div class="instructions">
+        <div class="text-1">
+          <p>Click Ryu to throw some moves</p>
+        </div>
+        <div class="text-2">
+          <p>Press 'X' to get swarve!</p>
+        </div>
+      </div>
+    </div>
   </div>
   <audio src="sound/hadouken.mp3" id="hadouken-sound"></audio>
+  <audio src="sound/intro_sound_effect.mp3" id="glitter"></audio>
+  <audio src="sound/start_music.mp3" id="start-music"></audio>
+  <audio src="sound/ohyeah.mp3#t=10,20" id="sexytime"></audio>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
