--- a/index.html
+++ b/index.html
@@ -30,12 +30,18 @@
           <p>Press 'X' to get swarve!</p>
         </div>
       </div>
+      <div class="ryu-angry">
+        <div class="ryu-still"></div>
+        <div class="ryu-ready"></div>
+        <div class="ryu-throwing"></div>
+        <div class="hadouken"></div>
+        <div class="ryu-cool"></div>
+      </div>
     </div>
   </div>
   <audio src="sound/hadouken.mp3" id="hadouken-sound"></audio>
   <audio src="sound/intro_sound_effect.mp3" id="glitter"></audio>
   <audio src="sound/start_music.mp3" id="start-music"></audio>
-  <audio src="sound/ohyeah.mp3#t=10,20" id="sexytime"></audio>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
